RESOLVED FIXED223060
[MacOS] Reenable Audio Capture in GPUProcess by default
https://bugs.webkit.org/show_bug.cgi?id=223060
Summary [MacOS] Reenable Audio Capture in GPUProcess by default
youenn fablet
Reported 2021-03-11 00:14:25 PST
[MacOS] Reenable Audio Capture in GPUProcess by default
Attachments
Patch (1.29 KB, patch)
2021-03-11 00:15 PST, youenn fablet
no flags
youenn fablet
Comment 1 2021-03-11 00:15:52 PST
EWS
Comment 2 2021-03-11 08:29:25 PST
commit-queue failed to commit attachment 422909 [details] to WebKit repository. To retry, please set cq+ flag again.
EWS
Comment 3 2021-03-12 07:08:40 PST
Committed r274356: <https://commits.webkit.org/r274356> All reviewed patches have been landed. Closing bug and clearing flags on attachment 422909 [details].
Radar WebKit Bug Importer
Comment 4 2021-03-12 07:09:13 PST
Truitt Savell
Comment 5 2021-03-12 10:31:08 PST
It looks like the changes in https://trac.webkit.org/changeset/274356/webkit broke two API tests Failed TestWebKitAPI.WebKit2.GetUserMediaRepromptAfterAudioVideoBeingDenied /Volumes/Data/worker/bigsur-release/build/Tools/TestWebKitAPI/Tests/WebKit/GetUserMediaReprompt.mm:119 Value of: [webView haveStream:YES] Actual: false Expected: true Timeout TestWebKitAPI.WebKit2.GetUserMediaReprompt 2021-03-12 09:30:58.722 TestWebKitAPI[48089:69154089] Encountered error: Error Domain=WKErrorDomain Code=4 "A JavaScript exception occurred" UserInfo={WKJavaScriptExceptionLineNumber=22, WKJavaScriptExceptionMessage=TypeError: null is not an object (evaluating 'stream.getTracks'), WKJavaScriptExceptionColumnNumber=23, WKJavaScriptExceptionSourceURL=file:///Volumes/Data/worker/bigsur-release-tests-wk2/build/WebKitBuild/Release/TestWebKitAPI.resources/getUserMedia.html, NSLocalizedDescription=A JavaScript exception occurred} while evaluating script: stop() 2021-03-12 09:30:58.727 TestWebKitAPI[48089:69154089] Encountered error: Error Domain=WKErrorDomain Code=4 "A JavaScript exception occurred" UserInfo={WKJavaScriptExceptionLineNumber=22, WKJavaScriptExceptionMessage=TypeError: null is not an object (evaluating 'stream.getTracks'), WKJavaScriptExceptionColumnNumber=23, WKJavaScriptExceptionSourceURL=file:///Volumes/Data/worker/bigsur-release-tests-wk2/build/WebKitBuild/Release/TestWebKitAPI.resources/getUserMedia.html, NSLocalizedDescription=A JavaScript exception occurred} while evaluating script: stop() history: https://results.webkit.org/?suite=api-tests&suite=api-tests&test=TestWebKitAPI.WebKit2.GetUserMediaReprompt&test=TestWebKitAPI.WebKit2.GetUserMediaRepromptAfterAudioVideoBeingDenied
Note You need to log in before you can comment on or make changes to this bug.