[MacOS] Reenable Audio Capture in GPUProcess by default https://bugs.webkit.org/show_bug.cgi?id=223060

Reviewed by Eric Carlson.

* Shared/WebPreferencesDefaultValues.cpp:
(WebKit::defaultCaptureAudioInGPUProcessEnabled):


Canonical link: https://commits.webkit.org/235225@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274356 268f45cc-cd09-0410-ab3c-d52691b4dbfc