Source/WebKit/Shared/WebPreferencesDefaultValues.cpp
@@ -185,7 +185,7 @@ bool defaultCaptureAudioInGPUProcessEnabled()
 {
 #if HAVE(SYSTEM_FEATURE_FLAGS)
 #if PLATFORM(MAC)
-    return isFeatureFlagEnabled("gpu_process_webrtc");
+    return true;
 #elif PLATFORM(IOS_FAMILY)
     return isFeatureFlagEnabled("gpu_process_media");
 #endif
